--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.2.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.0.3"
