--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.9.0",
+    "replicate": "^0.22.0",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
