--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-h5-audio-player": "^3.9.0",
+    "react-youtube": "^10.1.0",
     "replicate": "^0.22.0",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.0.3"
+    "uploadthing": "^6.0.3",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@types/node": "^20",
